Fixed gap caused by switch from div to button

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,7 @@ a {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
     position: relative;
+    display: block;
 }
 
     .project-container i {
